--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,3 +44,7 @@
     max-width: 100%;
     height: auto;
 }
+
+.footer .row {
+    align-items: center; /* Centra verticalmente las imágenes del footer */
+}
