--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,7 +42,11 @@
 }
 .footer-logo {
     max-width: 100%;
+    max-height: 80px;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer .row {
